--- a/src/app/listings/listings.component.css
+++ b/src/app/listings/listings.component.css
@@ -1,16 +1,7 @@
-.cardStyle {
-  height: 550px;
-  max-width: 400px;
-  overflow: hidden;
+.content {
+  padding: 20px;
 }
 
-/*.imgStyle {*/
-/*  max-width: 100%;*/
-/*  height: max-content;*/
-/*}*/
-
-mat-card img{
-  object-fit: cover; /*this makes the image in src fit to the size specified below*/
-  width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
-  height: 55%;
+.cardContent {
+  height: 60px;
 }
