--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <img src="../../assets/images/thumb/MWL2.png" alt="logo">
+  <img class="logo" src="../../assets/images/thumb/MWLtransparent.png" alt="logo">
   <span class="spacer"></span>
   <button mat-icon-button aria-label="facebook icon">
     <mat-icon color="accent">facebook</mat-icon>
