--- a/src/app/listings/listings.component.html
+++ b/src/app/listings/listings.component.html
@@ -1,3 +1,18 @@
+<div class="banner"></div>
+<mat-toolbar fxLayoutAlign="space-evenly center">
+  <span>
+      <a class="category" href="#">BAGS</a>
+  </span>
+  <span>
+      <a class="category" href="#">BOOKMARKS</a>
+  </span>
+  <span>
+      <a class="category" href="#">MAGNETS</a>
+  </span>
+  <span>
+      <a class="category" href="#">DOILIES</a>
+  </span>
+</mat-toolbar>
 <div class="content" fxLayoutAlign="center center">
   <div fxLayout="row wrap" fxLayoutGap="30px grid" fxFlex="90%">
     <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let listing of listings">
