--- a/src/app/listings/listings.component.css
+++ b/src/app/listings/listings.component.css
@@ -7,15 +7,6 @@
   height: 60px;
 }
 
-.banner {
-  background-image: url("../../assets/images/full/banner-smaller.png");
-  height: 65%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
 .category {
   text-decoration: none;
   color: #7f543f;
@@ -24,4 +15,17 @@
 
 .mat-button-ripple {
   display: none;
+}
+
+mat-card:hover {
+  box-shadow: 4px 4px 8px 4px rgba(0,0,0,0.2);
+  z-index: 15;
+}
+
+img {
+  transition: transform .5s ease;
+}
+
+img:hover {
+  transform: scale(1.05);
 }
