--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,24 +2,65 @@
 
 <div fxLayout="column">
   <div fxLayout="row">
-    <div fxLayoutAlign="center" fxFlex class="card mat-elevation-z0">
-      <h1>5</h1>
+    <div fxLayoutAlign="center" fxFlex class="mat-elevation-z0">
+        <div class="p-5 aboutText1">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et leo quis mi luctus vestibulum.
+            Nulla ornare massa ut nulla cursus posuere. Suspendisse quis lectus eu mi gravida efficitur non at velit.
+            Donec feugiat dictum augue, quis ornare mauris lobortis non. Pellentesque habitant morbi tristique senectus et
+            netus et malesuada fames ac turpis egestas. In auctor vitae arcu eget viverra. Nunc eget justo efficitur,
+            tristique velit a, mattis magna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
+            Pellentesque euismod pulvinar sem nec tempor. Vivamus ac porttitor quam, vitae ullamcorper mauris.
+            Proin eget tellus ac eros molestie laoreet vitae sed leo.
+          </p>
+        </div>
     </div>
-    <div fxLayoutAlign="center" fxFlex class="card mat-elevation-z0">
-      <h1>6</h1>
+    <div fxLayoutAlign="center" fxFlex class="mat-elevation-z0">
+      <div class="p-5">
+        <img src="assets/images/full/about2.JPG" alt="doily">
+      </div>
     </div>
   </div>
   <div fxLayout="row">
-    <div fxLayoutAlign="center" fxFlex class="card mat-elevation-z0">
-      <h1>5</h1>
+    <div fxLayoutAlign="center" fxFlex class="mat-elevation-z0">
+      <div class="p-5">
+        <img src="assets/images/full/about1.JPG" alt="doily">
+      </div>
     </div>
-    <div fxLayoutAlign="center" fxFlex class="card mat-elevation-z0">
-      <h1>6</h1>
+    <div fxLayoutAlign="center" fxFlex class="mat-elevation-z0">
+      <div class="p-5 aboutText2">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et leo quis mi luctus vestibulum.
+          Nulla ornare massa ut nulla cursus posuere. Suspendisse quis lectus eu mi gravida efficitur non at velit.
+          Donec feugiat dictum augue, quis ornare mauris lobortis non. Pellentesque habitant morbi tristique senectus et
+          netus et malesuada fames ac turpis egestas. In auctor vitae arcu eget viverra. Nunc eget justo efficitur,
+          tristique velit a, mattis magna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
+          Pellentesque euismod pulvinar sem nec tempor. Vivamus ac porttitor quam, vitae ullamcorper mauris.
+          Proin eget tellus ac eros molestie laoreet vitae sed leo.
+        </p>
+      </div>
     </div>
   </div>
   <div fxLayout="row">
-    <div fxLayoutAlign="center" fxFill class="card mat-elevation-z0">
-      <h1>1</h1>
+    <div fxLayoutAlign="center" fxFill class="mat-elevation-z0">
+      <div fxLayout="row" fxLayoutAlign="space-evenly" class="p-5">
+        <div fxLayoutAlign="space-between center"  class="aboutText3">
+          <mat-icon class="aboutIcon" aria-hidden="false" aria-label="local_shipping icon">local_shipping</mat-icon>
+          <p>
+            Pellentesque euismod pulvinar sem nec tempor. Vivamus ac porttitor quam, vitae ullamcorper mauris.
+          </p>
+        </div>
+        <div fxLayoutAlign="space-between center" class="aboutText3">
+          <mat-icon class="aboutIcon" aria-hidden="false" aria-label="giftcard icon">card_giftcard</mat-icon>
+          <p>
+            Pellentesque euismod pulvinar sem nec tempor. Vivamus ac porttitor quam, vitae ullamcorper mauris.
+          </p>
+        </div>
+        <div fxLayoutAlign="space-between center" class="aboutText3">
+          <mat-icon class="aboutIcon" aria-hidden="false" aria-label="giftcard icon">payment</mat-icon>
+          <p>
+            Pellentesque euismod pulvinar sem nec tempor. Vivamus ac porttitor quam, vitae ullamcorper mauris.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
