--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar color="primary">
   <img class="logo" src="../../assets/images/thumb/MWLtransparent.png" alt="logo">
   <span class="spacer"></span>
+  <span class="pe-3" style="color: #946c5a">About</span>
+  <span class="pe-3" style="color: #946c5a">Webshop</span>
   <button mat-icon-button aria-label="facebook icon">
     <mat-icon color="accent">facebook</mat-icon>
   </button>
