--- a/src/app/listings/listings.component.html
+++ b/src/app/listings/listings.component.html
@@ -1,17 +1,17 @@
-<mat-toolbar fxLayoutAlign="space-evenly center">
-  <span>
-      <a class="category" href="#">BAGS</a>
-  </span>
-  <span>
-      <a class="category" href="#">BOOKMARKS</a>
-  </span>
-  <span>
-      <a class="category" href="#">MAGNETS</a>
-  </span>
-  <span>
-      <a class="category" href="#">DOILIES</a>
-  </span>
-</mat-toolbar>
+<div fxLayout="row" fxLayoutAlign="space-evenly" class="p-5">
+  <button class="category pt-3 pb-3 mat-elevation-z2">
+    <a class="category-link" href="#">BAGS</a>
+  </button>
+  <button class="category pt-3 pb-3 mat-elevation-z2">
+    <a class="category-link" href="#">BOOKMARKS</a>
+  </button>
+  <button class="category pt-3 pb-3 mat-elevation-z2">
+    <a class="category-link" href="#">CHRISTMAS</a>
+  </button>
+  <button class="category pt-3 pb-3 mat-elevation-z2">
+    <a class="category-link" href="#">DOILIES</a>
+  </button>
+</div>
 <div class="content" fxLayoutAlign="center center">
   <div fxLayout="row wrap" fxLayoutGap="30px grid" fxFlex="90%">
     <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let listing of listings">
@@ -23,10 +23,7 @@
         </mat-card-content>
         <mat-card-actions align="end">
           <button mat-icon-button>
-            <mat-icon aria-hidden="false" aria-label="favorite icon">favorite</mat-icon>
-          </button>
-          <button mat-icon-button>
-            <mat-icon aria-hidden="false" aria-label="cart icon">shopping_cart</mat-icon>
+            <mat-icon class="icons" aria-hidden="false" aria-label="cart icon">shopping_cart</mat-icon>
           </button>
         </mat-card-actions>
       </mat-card>
