--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,6 +2,8 @@ footer {
   background-color: #a98676;
   color: #ebe6d9;
   font-family: Playfair Display, serif;
+  bottom: 0;
+  left: 0;
 }
 
 .links {
