--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="pt-3">
-  <div fxLayout="row" fxLayoutAlign="start center">
+  <div fxLayout="row" fxLayoutAlign="start center" class="btmFooter">
     <span class="ps-3 pb-3">
       <a href="#" style="text-decoration: none; color: #ebe6d9; cursor: default; pointer-events: none">© 2022 Copyright: MWLCroatia</a>
     </span>
