--- a/src/app/listings/listing-detail/listing-detail.component.html
+++ b/src/app/listings/listing-detail/listing-detail.component.html
@@ -1,1 +1,43 @@
-<p>listing-detail works!</p>
+<div fxLayout="row" class="pt-5">
+  <div fxLayoutAlign="center" fxFlex class="mat-elevation-z0">
+    <div class="p-5">
+      <img src="assets/images/full/about2.JPG" alt="detail-img">
+    </div>
+  </div>
+  <div fxLayoutAlign="left" fxFlex class="mat-elevation-z0">
+    <div class="p-5 aboutText1">
+      <h1>Listing Title</h1>
+      <h2>Price $</h2>
+      <button class="ps-4 pt-2 pe-4 pb-2" mat-stroked-button>Add to cart</button>
+      <div class="info mt-4 mb-4">
+        <h3>Information</h3>
+        <ul class="infoList">
+          <li class="pb-2" fxLayoutAlign="start center">
+            <mat-icon class="me-2">back_hand</mat-icon>
+            Handmade
+          </li>
+          <li class="pb-2" fxLayoutAlign="start center">
+            <mat-icon class="me-2">flight_takeoff</mat-icon>
+            Ships from Croatia
+          </li>
+          <li class="pb-2" fxLayoutAlign="start center">
+            <mat-icon class="me-2">content_cut</mat-icon>
+            Materials: materials
+          </li>
+          <li class="pb-2" fxLayoutAlign="start center">
+            <mat-icon class="me-2">straighten</mat-icon>
+            Height: height
+            Width: width
+            Depth: depth
+          </li>
+        </ul>
+      </div>
+      <div class="desc">
+        <h3>Description</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et leo quis mi luctus vestibulum.
+          Nulla ornare massa ut nulla cursus posuere. Suspendisse quis lectus eu mi gravida efficitur non at velit.
+          Donec feugiat dictum augue, quis ornare mauris lobortis non.</p>
+      </div>
+    </div>
+  </div>
+</div>
