--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -41,11 +41,11 @@
   </div>
   <hr class="divider">
   <div fxLayout="row" fxLayoutAlign="start" class="proceed p-2 ms-5 me-5 mt-5 mb-5">
-    <button mat-stroked-button class="continue ps-3 pt-1 pe-3 pb-1 mt-5 ms-3">Continue shopping</button>
+    <button mat-stroked-button class="continue ps-3 pt-1 pe-3 pb-1 mt-5 ms-3" routerLink="/listings">Continue shopping</button>
     <span class="spacer"></span>
     <div fxLayout="column" fxLayoutAlign="space-evenly end" class="titleAndAmount me-5">
       <h1>Total: 200 $</h1>
-      <button mat-stroked-button class="proceedButton ps-3 pt-1 pe-3 pb-1">Proceed to checkout</button>
+      <button mat-stroked-button class="proceedButton ps-3 pt-1 pe-3 pb-1" routerLink="/checkout">Proceed to checkout</button>
     </div>
   </div>
   <div class="filler"></div>
