--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -119,7 +119,7 @@
       </div>
       <div>
         <button mat-stroked-button matStepperPrevious class="me-3">Back</button>
-        <button mat-stroked-button style="color: #7f543f; background-color: #ebe6d9;">Checkout</button>
+        <button mat-stroked-button style="color: #7f543f; background-color: #ebe6d9;" routerLink="/purchase">Checkout</button>
       </div>
     </mat-step>
   </mat-stepper>
