--- a/src/app/listings/listings.component.css
+++ b/src/app/listings/listings.component.css
@@ -50,3 +50,11 @@ img:hover {
   transform: scale(1.05);
   box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.2);
 }
+
+button {
+  color: #757575;
+}
+
+button:hover {
+  color: black;
+}
