--- a/src/app/payment-complete/payment-complete.component.html
+++ b/src/app/payment-complete/payment-complete.component.html
@@ -6,6 +6,6 @@
   <div class="thankyou" fxLayoutAlign="center center" fxLayout="column">
     <h1 style="font-family: Playfair Display, serif">Thank you for your purchase!</h1>
     <h3 style="font-family: Playfair Display, serif">A confirmation e-mail has been sent to the e-mail address you provided.</h3>
-    <button mat-button>Back to shop</button>
+    <button mat-button routerLink="/listings">Back to shop</button>
   </div>
 </div>
