--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
       <a class="links" href="#">Contact</a>
     </span>
     <span class="ps-3 pb-3" >
-      <a class="links" href="#">Admin</a>
+      <a class="links" routerLink="/login" href="#">Admin</a>
     </span>
   </div>
 </footer>
