--- a/src/app/listings/listing-detail/listing-detail.component.css
+++ b/src/app/listings/listing-detail/listing-detail.component.css
@@ -20,8 +20,16 @@ mat-icon {
   width: 80%;
 }
 
-button {
+.cartButton {
   background-color: #ebe6d9;
   font-size: large;
   color: #7f543f;
+}
+
+.back {
+  color: #757575;;
+}
+
+.back:hover {
+  color: black;
 }
