--- a/src/app/listings/listing-detail/listing-detail.component.html
+++ b/src/app/listings/listing-detail/listing-detail.component.html
@@ -10,14 +10,14 @@
     <div class="p-5 aboutText1">
       <h1>{{listing.title}}</h1>
       <h2>{{listing.price}} $</h2>
-      <p *ngIf="listing.amount == 1" class="onlyOne">Only 1 left!</p>
-      <div fxLayout="row" fxLayoutAlign="start center" class="amount mb-2">
-        <button class="less" (click)="less()" [disabled]="listing.amount == 1">-</button>
+      <p *ngIf="listing.inStock == 1" class="onlyOne">Only 1 left!</p>
+      <div fxLayout="row" fxLayoutAlign="start center" class="amount mb-2" *ngIf="listing.inStock > 1">
+        <button class="less" (click)="less()" [disabled]="remainingAmount == 1">-</button>
         <input disabled style="width: 85px; text-align: center" value="{{inputAmount}}">
-        <button class="more ps-2 pe-2" (click)="more()" [disabled]="listing.amount == 1">+</button>
+        <button class="more ps-2 pe-2" (click)="more()" [disabled]="remainingAmount == 1">+</button>
       </div>
-      <button class="ps-4 pt-2 pe-4 pb-2 cartButton" mat-stroked-button [disabled]="listing.amount == 0">
-        {{listing.amount == 0 ? 'Out of Stock' : 'Add to Cart'}}
+      <button class="ps-4 pt-2 pe-4 pb-2 cartButton" mat-stroked-button [disabled]="(listing.inStock == 0) || (remainingAmount == 0)" (click)="addToCart()">
+        {{listing.inStock == 0 ? 'Out of Stock' : 'Add to Cart'}}
       </button>
       <div class="info mt-4 mb-4">
         <h3>Information</h3>
