--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,6 +16,6 @@
     <img class="iconImg" src="../../assets/images/thumb/instagram.png">
   </button>
   <a class="links pe-5" routerLink="/cart">
-    <mat-icon matBadge="{{cartItemAmount}}" matBadgeSize="medium" matBadgePosition="below" matBadgeOverlap="false" class="cartIcon" color="accent">shopping_cart</mat-icon>
+    <mat-icon matBadge="{{itemCount}}" matBadgeSize="medium" matBadgePosition="below" matBadgeOverlap="false" class="cartIcon" color="accent">shopping_cart</mat-icon>
   </a>
 </mat-toolbar>
